--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dependencies": {
         "bootstrap-vue": "^2.21.2",
         "font-awesome": "^4.7.0",
+        "node-sass": "^6.0.1",
         "vue-d3-barchart": "^0.0.28"
     }
 }
